<resources>
    <string name="app_name">Cafe Management Android App</string>
    <string name="allOrder_order_number">Order Number:</string>
    <string name="allOrder_total_amount">Total Amount:</string>
    <string name="allOrder_dollar">$</string>
    <string name="allOrder_cancel_order">Cancel Order</string>
    <string name="currentOrder_sub_total">Sub-total:</string>
    <string name="currentOrder_sales_tax">Sales Tax:</string>
    <string name="currentOrder_total_amount">Total Amount:</string>
    <string name="currentOrder_items">Items:</string>
    <string name="currentOrder_remove_item">Remove Item</string>
    <string name="currentOrder_place_order">Place Order</string>
    <string name="main_welcome_to_ru_cafe">Welcome to RU cafe</string>
    <string name="go_to_current_order">Go to Current Order</string>
    <string name="coffee_changes_based_on_size">coffe changes based on size</string>
    <string name="coffee_select_size">Select Size:</string>
    <string name="coffee_short">Short</string>
    <string name="coffee_tall">Tall</string>
    <string name="coffee_grande">Grande</string>
    <string name="coffee_venti">Venti</string>
    <string name="coffee_qty">Qty:</string>
    <string name="coffee_select_add_ons">Select Add-ons:</string>
    <string name="coffee_sweet_cream">Sweet Cream</string>
    <string name="coffee_mocha">Mocha</string>
    <string name="coffee_caramel">Caramel</string>
    <string name="coffee_french_vanilla">French Vanilla</string>
    <string name="coffee_irish_cream">Irish Cream</string>
    <string name="coffee_sub_total">Sub-total:</string>
    <string name="coffee_add_to_cart">Add to Cart</string>
    <string name="donut_select_type_and_flavor_of_donut">Select Type and Flavor of Donut:</string>
    <string name="donut_sub_total">Sub-total:</string>
    <string name="dollar">$</string>
    <string name="donut_add_to_cart">Add to Cart</string>
    <string name="sandwich_bread">Bread:</string>
    <string name="sandwich_bagel">Bagel</string>
    <string name="sandwich_wheat_toast">Wheat Toast</string>
    <string name="sandwich_sour_dough">Sour Dough</string>
    <string name="sandwich_protein">Protein:</string>
    <string name="sandwich_beef">Beef</string>
    <string name="sandwich_fish">Fish</string>
    <string name="sandwich_chicken">Chicken</string>
    <string name="sandwich_add_on">Add-on:</string>
    <string name="sandwich_tomatoes">Tomatoes</string>
    <string name="sandwich_lettuce">Lettuce</string>
    <string name="sandwich_cheese">Cheese</string>
    <string name="sandwich_onions">Onions</string>
    <string name="sandwich_sub_total">Sub-total:</string>
    <string name="sandwich_add_to_cart">Add to Cart</string>
    <string name="sandwich_sandwichImage">Sandwich</string>
    <string name="currentOrderListView_textview">TextView</string>
    <string name="donutOrderItem_donut_order">Donut Order</string>
    <string name="donut_item_type">Type: </string>
    <string name="donut_item_textview">TextView</string>
    <string name="donut_item_flavor">Flavor: </string>
    <string name="donut_item_textview_flavor">TextView</string>
    <string name="donut_item_qty">Qty:</string>
    <string name="list_item_text">Text</string>
    <string name="listimage">listImage</string>
</resources>