<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderCoffeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/coffeeToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="@android:color/white"
            app:title="Order Coffee"
            app:titleTextColor="@android:color/white" />

        <ImageView
            android:id="@+id/coffeeImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/coffee_changes_based_on_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_select_size"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/coffeeSizeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/shortRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/coffee_short"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/tallRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/coffee_tall"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/grandeRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/coffee_grande"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/ventiRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/coffee_venti"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_qty"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/coffeeQtySpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCoffeeAdOns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_select_add_ons"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sweetCreamCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_sweet_cream"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/mochaCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_mocha"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/caramelCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_caramel"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/frenchVanillaCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_french_vanilla"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/irishCreamCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/copse"
                android:text="@string/coffee_irish_cream"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="143dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/copse"
                android:paddingStart="20dp"
                android:text="@string/coffee_sub_total"
                android:textSize="25sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/coffeeSubTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:editable="false"
                android:ems="10"
                android:fontFamily="@font/copse"
                android:textSize="25sp"
                tools:ignore="Deprecated,LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/coffeeAddtoCartButton"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/copse"
            android:text="@string/coffee_add_to_cart"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>