<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rucafe.android_app.CurrentOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/allOrderToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="@android:color/white"
            app:title="Current Order"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/copse"
                android:text="@string/currentOrder_sub_total"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subTotalTextNumber"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:autofillHints="no"
                android:editable="false"
                android:ems="10"
                android:fontFamily="@font/copse"
                android:textSize="20sp"
                tools:ignore="Deprecated,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/copse"
                android:text="@string/currentOrder_sales_tax"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/salseTexTextNumber"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="47.5dp"
                android:autofillHints="no"
                android:editable="false"
                android:ems="10"
                android:fontFamily="@font/copse"
                android:textSize="20sp"
                tools:ignore="Deprecated,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/copse"
                android:text="@string/currentOrder_total_amount"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalAmountTextNumber"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:autofillHints="no"
                android:editable="false"
                android:ems="10"
                android:fontFamily="@font/copse"
                android:textSize="20sp"
                tools:ignore="Deprecated,LabelFor" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/copse"
            android:text="@string/currentOrder_items"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/currentOrderListView"
            android:layout_width="match_parent"
            android:layout_height="368dp"
            android:layout_marginTop="10dp"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:focusable="true"
            android:listSelector="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RemoveItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/copse"
                android:text="@string/currentOrder_remove_item"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/placeOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/copse"
                android:text="@string/currentOrder_place_order"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>